syntax = "proto3";
package happycar;
option go_package = "happy-car/proto/gen/go;trippb";

message Location {
  double latitude = 1;
  double longitude = 2;
}

enum TripStatus {
  TS_NOT_SPECIFIED = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  FINISHED = 3;
  PAID = 4;
}

message Trip {
  string start = 1;       //第一个字段是start
  string end = 2;         // 第二个字段是end
  int32 duration_sec = 3; // 要养成习惯，有单位的把单位放后面
  int32 fee_cent = 4;
  Location start_pos = 5;
  Location end_pos = 6;
  repeated Location path_locations = 7; // repeated 命名规则：字段名+s
  TripStatus status = 8;
  bool isPromotionTrip = 9;
  bool isFromGuestUser = 10; // 默认是0， 因此怎么命名也要考虑
}

message GetTripRequest {
  string id = 1;
}

message GetTripResponse {
  string id = 1;
  Trip trip = 2;
}

service TripService {
  rpc GetTrip (GetTripRequest) returns (GetTripResponse);
}